--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$yY/xw97ay7UF1ws0CYI9Qe02XcbXtDEY67fuyMAYyN1Bh3.S033PK"
+# 	- password: java.lang.String = "$2a$05$cW/l.1UXyJ1Se/bdk9chJ.fOW5OBOnaRU5WJMu1dIYWdh9zvm3hk2"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$hURMBdgBLizOBub/hZIrjOzmfsa7ywwlKcGKG.HRbFqyfOzlcH71K"
+# 	- password: java.lang.String = "$2a$05$RdbRrxxeoHZQ9ZNVAjJSpunrZZJOF/apw8z9S221bc5uAP7rXbeoy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$FA4Sux5ZFFDMEBP4qPDQmuWHXE4zVILfnQjE5iQXxA8X.HUJGBwBC"
+# 	- password: java.lang.String = "$2a$05$sZu2lHxrmLuEz8Mzsb3p.ufjAHnHtJMxuTS46Kxw4F0DY8tTHHsx2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$TMEParUzq7QAIvnhIiZhuO8tV8RC5BjeM19NntQuZbVB4jXZndd3i"
+# 	- password: java.lang.String = "$2a$05$NWzZu10yvwdf8xlx66GPQuIkARCio6CBYgwoG9eQV9jhMTRDnwmIW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$DY5xN5ROUxlH6JT7BONvce/RNwcRK9prOgpF6ipAEpJDBox90ehI."
+# 	- password: java.lang.String = "$2a$05$lgChw5lOl6ggzPbpDGzUx.bVlD/HP1Wn3t.8lPBPvPlF5CyoJ4Y6e"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$S7XEFD4/Rmndh.5UuoR2AuN5Hsz7s3/yNpXkgZzqP4R23e9L3g14i"
+# 	- password: java.lang.String = "$2a$05$RqQx1.2o0v9mXCLzUO4UG.sorWZ5YK/JZi0mvQiGZ8otbifVxKryW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$JuKOoO8X8mcNy/3auPhtW.tTilNDkSdbOLzodgSrpAjy67xjxf9um"
+# 	- password: java.lang.String = "$2a$05$sExmvO4gKCZvlZjZDpBG0eOOl/pPiwz.XsNhTKAlbQd8mK6qu1GSy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$p0po2xg9PCpUG3gShy72UuUlhiqvVOfz/crRMdOvA4A/Sf9sLuMzK"
+# 	- password: java.lang.String = "$2a$05$nUBXnRpKPCM2ljCUt6HrvumU0ieJ12/uzeqsR856PcavUIiz3Cmce"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$dZ7xQ3/kx3iuvR4gKTjpTeDcYTc5mSxOBVzw8oMi6gl4yYj0zLV8u"
+# 	- password: java.lang.String = "$2a$05$1MasAriO.88az.ooenRov.8pH/7QN9ak8bK3PKzrEt78Pp5RdO24u"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$Xf0QcR3WKhaEvZs2PUooXOAosAPCqapIpPMN2b0ZsUH52W5iiwDpC"
+# 	- password: java.lang.String = "$2a$05$7SWAiU.ID/TYf/pFxiRdOOj/YZnxlwIv0.KR5h78w.uxjOy6QT.wu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$7VRHWWozdCRB8poXV.OcVO5UnM54iY.sbUCkof9fMfTSHEiJ0rvfC"
+# 	- password: java.lang.String = "$2a$05$aHp9way4k9T2u.Vz35mBD.7NyKN9q7NJ2N.9WiCrAeDtGVOhHsL/i"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
