--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$cW/l.1UXyJ1Se/bdk9chJ.fOW5OBOnaRU5WJMu1dIYWdh9zvm3hk2"
+# 	- password: java.lang.String = "$2a$05$g.PnSbN2vRrJQ6zBY.KLiO2WLEQfLtgCAhtNI/2g477JLLw8wFjdO"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$RdbRrxxeoHZQ9ZNVAjJSpunrZZJOF/apw8z9S221bc5uAP7rXbeoy"
+# 	- password: java.lang.String = "$2a$05$4ajKzNRT4PVhyxhUqAiOle/bJuzPPA10T5WtJDPUw7w5C3G0reYZS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$sZu2lHxrmLuEz8Mzsb3p.ufjAHnHtJMxuTS46Kxw4F0DY8tTHHsx2"
+# 	- password: java.lang.String = "$2a$05$s4y.BuYA2TFGwfDFN9wdLuCu8IMLV0DLPW350AdEHLC3qAW1NF1Xa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$NWzZu10yvwdf8xlx66GPQuIkARCio6CBYgwoG9eQV9jhMTRDnwmIW"
+# 	- password: java.lang.String = "$2a$05$CQfHUfHRuW6qQmp9O93hPu6XVsNIFEp5hBtt0uDhh/5ja0yEHP49a"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$lgChw5lOl6ggzPbpDGzUx.bVlD/HP1Wn3t.8lPBPvPlF5CyoJ4Y6e"
+# 	- password: java.lang.String = "$2a$05$HXj94sN0BDM1EVy6pQQ/0eqkSr3grt4IwfYyK4oitxzQilvzzwa5i"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$RqQx1.2o0v9mXCLzUO4UG.sorWZ5YK/JZi0mvQiGZ8otbifVxKryW"
+# 	- password: java.lang.String = "$2a$05$I3dD6gZ6BjtmACdO8wH8juphWkQp.Oi3z7NDBPu8M1RZvFi47xUTq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$sExmvO4gKCZvlZjZDpBG0eOOl/pPiwz.XsNhTKAlbQd8mK6qu1GSy"
+# 	- password: java.lang.String = "$2a$05$y0J/6pm65XtCyzqhMC7iNO88o6HD002S4EvIitSdp09AL1rk1PZNW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$nUBXnRpKPCM2ljCUt6HrvumU0ieJ12/uzeqsR856PcavUIiz3Cmce"
+# 	- password: java.lang.String = "$2a$05$su3fWX0PIyaEq421bXyUFefsYSFg442IJ732TSS2uGNQjkcsVTScS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$1MasAriO.88az.ooenRov.8pH/7QN9ak8bK3PKzrEt78Pp5RdO24u"
+# 	- password: java.lang.String = "$2a$05$t/u28S15QzXJFEK7DCf94ueERmlrd1BHz8lmb6pqwfOUbYrnGhitC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$7SWAiU.ID/TYf/pFxiRdOOj/YZnxlwIv0.KR5h78w.uxjOy6QT.wu"
+# 	- password: java.lang.String = "$2a$05$T5Tp7v8xxPadhU89D5DjYuX3CN2wIzirYZocNQgBLOWoVso2zYRYS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$aHp9way4k9T2u.Vz35mBD.7NyKN9q7NJ2N.9WiCrAeDtGVOhHsL/i"
+# 	- password: java.lang.String = "$2a$05$Pe7aIe1SpaLxPESNNEuNLeBiyfY5kBP6AnBY1NjlcuHwhhkXCtM3K"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
